[package]
name = "transfer-extensions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_extensions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1" }
solana-program = "1.18.15"
spl-transfer-hook-interface = { version = "0.6.3" }
spl-tlv-account-resolution ={ version = "0.6.3" }
spl-type-length-value = { version = "0.4.3" }
